fix: justify-content, align-items 속성값을 end에서 flex-end로 변경

--- a/src/components/Articles/LostItemDetailPage/components/LoginRequireLostItemModal/LoginRequireLostItemModal.module.scss
+++ b/src/components/Articles/LostItemDetailPage/components/LoginRequireLostItemModal/LoginRequireLostItemModal.module.scss
@@ -23,7 +23,7 @@
   &__icon {
     display: flex;
     padding: 16px 24px;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     gap: 8px;
     align-self: stretch;
