--- a/src/components/Bus/BusRoutePage/components/TimeDetail/TimeDetailPC/TimeDetailPC.module.scss
+++ b/src/components/Bus/BusRoutePage/components/TimeDetail/TimeDetailPC/TimeDetailPC.module.scss
@@ -21,7 +21,7 @@
 .guide {
   display: flex;
   gap: 16px;
-  align-items: end;
+  align-items: flex-end;
 
   &__title {
     height: 24px;
