--- a/src/components/GraduationCalculatorPage/components/CreditChart/CreditChart.module.scss
+++ b/src/components/GraduationCalculatorPage/components/CreditChart/CreditChart.module.scss
@@ -46,7 +46,7 @@
     gap: 20px;
     position: relative;
     bottom: -30px;
-    align-items: end;
+    align-items: flex-end;
 
     &--name {
       width: 100%;
@@ -71,7 +71,7 @@
   &__total-credit {
     position: relative;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
     border-radius: 12px 12px 0 0;
     background: rgba(122 186 120 / 30%);
